# overseer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  OVERSEER_GUIDE.html  README.md  conftest.py  crypto_utils.py  deploy.sh  download-uk-tiles.sh  download_tiles.py  legacy_server.py  lora_bridge.py  lora_protocol.py  package-lock.json  prepper_llm_project.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  setup.sh  start_kiwix.bat  start_kiwix.sh  start_overseer.bat  start_overseer.sh  train_dictionary.py
.trash_local/: setup.sh.localmod  (+4 more)
.trash_local/v3-app-rejected/: .gitignore  README.md  pyproject.toml  requirements.txt
.trash_local/v3-app-rejected/scripts/: dev_backend.bat  dev_shell.bat  setup_dev.bat
.trash_local/v3-app-rejected/server/: __init__.py  app.py  config.py  db.py
.trash_local/v3-app-rejected/server/crypto/: __init__.py
.trash_local/v3-app-rejected/server/llm/: __init__.py
.trash_local/v3-app-rejected/server/modules/: __init__.py
.trash_local/v3-app-rejected/server/omp/: __init__.py
.trash_local/v3-app-rejected/server/plugins/: __init__.py
.trash_local/v3-app-rejected/shell/: esbuild.config.mjs  package-lock.json  package.json
.trash_local/v3-app-rejected/shell/public/: manifest.json  sw.js
.trash_local/v3-app-rejected/shell/src/: index.html  main.js  router.js
.trash_local/v3-app-rejected/shell/src/chrome/: breadcrumb.js  hotkeybar.js  statusbar.js
.trash_local/v3-app-rejected/shell/src/modules/: home.js  registry.js  stub.js
.trash_local/v3-app-rejected/shell/src/palette/: palette.js
.trash_local/v3-app-rejected/shell/src/state/: store.js
.trash_local/v3-app-rejected/shell/src/styles/: chrome.css  crt.css  home.css  overseer.css  palette.css  reset.css  tokens.css
(+247 files in other folders)
